# simple_c_compiler

./: CMakeLists.txt  README.md  common.h  compiler.cpp  compiler.h  error.cpp  error.h  genir.cpp  genir.h  gtest.cpp  intercode.cpp  intercode.h  lexer.cpp  lexer.h  parser.cpp  parser.h  set.cpp  set.h  symbol.cpp  symbol.h  symtab.cpp  symtab.h  token.cpp  token.h
test/: lexer_correct_test.txt
